Разобрался с чтением из оригинального файла почистил код